ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/LoanSecurity__c.object-meta.xml
<CustomObject>
    <label>Loan Security</label>
    <nameField>
        <label>Loan Security					 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Security</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>