ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/ContractPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractPrice__c</fullName>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>