ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/Conveyancing_Fee_Est__c.field-meta.xml
<CustomField>
    <fullName>Conveyancing_Fee_Est__c</fullName>
    <label>Conveyancing Fee (Est.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>