ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/ConveyancingFee__c.field-meta.xml
<CustomField>
    <fullName>ConveyancingFee__c</fullName>
    <description>Specify this if a non-standard conveyancing fee will be charged.</description>
    <label>Conveyancing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>