ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/EstimatedBasis__c.field-meta.xml
<CustomField>
    <fullName>EstimatedBasis__c</fullName>
    <description>How the property’s value is estimated.</description>
    <label>Estimated Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Estimate</fullName>
            </value>
            <value>
                <fullName>Certified Valuation</fullName>
            </value>
            <value>
                <fullName>Rates Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>