ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/EstimatedValue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedValue__c</fullName>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>