ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/FirstPriorityAmount__c.field-meta.xml
<CustomField>
    <fullName>FirstPriorityAmount__c</fullName>
    <description>The value of First Priority Amount. Only applicable to Security Property.</description>
    <label>First Priority Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>