ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/GrossRentalIncome__c.field-meta.xml
<CustomField>
    <fullName>GrossRentalIncome__c</fullName>
    <label>Gross Rental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>