ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/Holding__c.field-meta.xml
<CustomField>
    <fullName>Holding__c</fullName>
    <description>Applicant’s holding of the property</description>
    <label>Holding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Share</fullName>
            </value>
            <value>
                <fullName>Joint Tenants</fullName>
            </value>
            <value>
                <fullName>Sole</fullName>
            </value>
            <value>
                <fullName>Tenant Common In Equal Shares</fullName>
            </value>
            <value>
                <fullName>Tenant Common In Shares Of</fullName>
            </value>
            <value>
                <fullName>Time Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>