ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/Landsizeinsqm__c.field-meta.xml
<CustomField>
    <fullName>Landsizeinsqm__c</fullName>
    <label>Land size in sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>