ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/LicensedRealEstateContract__c.field-meta.xml
<CustomField>
    <fullName>LicensedRealEstateContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensed RealEstate Contract?</label>
    <type>Checkbox</type>
</CustomField>