ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Loan Security</relationshipLabel>
    <relationshipName>Loan_Security</relationshipName>
    <type>Lookup</type>
</CustomField>