ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/LoanPurchaseReasons__c.field-meta.xml
<CustomField>
    <fullName>LoanPurchaseReasons__c</fullName>
    <label>Loan Purchase Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>