ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/LoanPurpose__c.field-meta.xml
<CustomField>
    <fullName>LoanPurpose__c</fullName>
    <formula>CASE(TEXT(Loan__r.loanPurchaseReason__c), &apos;790&apos;, &apos;owner occupied&apos;, &apos;791&apos;, &apos;investment&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Purpose</label>
    <type>Text</type>
</CustomField>