ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/PrimarySecurity__c.field-meta.xml
<CustomField>
    <fullName>PrimarySecurity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Security?</label>
    <type>Checkbox</type>
</CustomField>