ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/PropertyDetails__c.field-meta.xml
<CustomField>
    <fullName>PropertyDetails__c</fullName>
    <label>Property Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>An established property</fullName>
            </value>
            <value>
                <fullName>Newly constructed property</fullName>
            </value>
            <value>
                <fullName>Off the plan</fullName>
            </value>
            <value>
                <fullName>Vacant land to build on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>