ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/PropertyTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>PropertyTypeFormula__c</fullName>
    <formula>CASE(TEXT(SecurityResidentialPropertyType__c), &apos;851&apos;, &apos;a residential&apos;,&apos;852&apos;,&apos;a commercial&apos;,&apos;1659&apos;, &apos;a house&apos;, &apos;1662&apos;, &apos;a townhouse/villa&apos;, &apos;1664&apos;, &apos;an apartment&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type Formula</label>
    <type>Text</type>
</CustomField>