ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <label>Reference Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>