ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/rentalEstimate__c.field-meta.xml
<CustomField>
    <fullName>rentalEstimate__c</fullName>
    <label>Rental Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>