ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/rentalFrequency__c.field-meta.xml
<CustomField>
    <fullName>rentalFrequency__c</fullName>
    <label>Rental Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>