ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/requestPropertyReport__c.field-meta.xml
<CustomField>
    <fullName>requestPropertyReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Property Report</label>
    <type>Checkbox</type>
</CustomField>