ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/requestRentalEstimate__c.field-meta.xml
<CustomField>
    <fullName>requestRentalEstimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Rental Estimate</label>
    <type>Checkbox</type>
</CustomField>