ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/requestSuburbReport__c.field-meta.xml
<CustomField>
    <fullName>requestSuburbReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Suburb Report</label>
    <type>Checkbox</type>
</CustomField>