ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/RequestValuationEstimate__c.field-meta.xml
<CustomField>
    <fullName>RequestValuationEstimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Valuation Estimate</label>
    <type>Checkbox</type>
</CustomField>