ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/SecurityResidentialPropertyType__c.field-meta.xml
<CustomField>
    <fullName>SecurityResidentialPropertyType__c</fullName>
    <label>Security Residential Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PropertyTypes</valueSetName>
    </valueSet>
</CustomField>