ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/SecurityType__c.field-meta.xml
<CustomField>
    <fullName>SecurityType__c</fullName>
    <label>Security Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SecurityTypes</valueSetName>
    </valueSet>
</CustomField>