ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/StateRevenueOffice__c.field-meta.xml
<CustomField>
    <fullName>StateRevenueOffice__c</fullName>
    <formula>CASE(
    PropertyAddress__StateCode__s,
    &quot;ACT&quot;, &quot;Australian Capital Territory (ACT) Revenue Office&quot;,
    &quot;NSW&quot;, &quot;New South Wales (NSW) Office of State Revenue&quot;,
    &quot;NT&quot;, &quot;Northern Territory (NT) Department of Treasury and Finance&quot;,
    &quot;QLD&quot;, &quot;Queensland (QLD) Treasury&quot;,
    &quot;SA&quot;, &quot;South Australia (SA) Department of Treasury and Finance&quot;,
    &quot;VIC&quot;, &quot;Victorian (VIC) State Revenue Office&quot;,
    &quot;WA&quot;, &quot;Western Australia (WA) Department of Finance&quot;,
    &quot;Unknown State&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Revenue Office</label>
    <type>Text</type>
</CustomField>