ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TenureType__c.field-meta.xml
<CustomField>
    <fullName>TenureType__c</fullName>
    <description>Land’s Tenure type</description>
    <label>Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community Title</fullName>
            </value>
            <value>
                <fullName>Company Title</fullName>
            </value>
            <value>
                <fullName>Crown Land</fullName>
            </value>
            <value>
                <fullName>Crown Lease</fullName>
            </value>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Group Titles Plan</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
            <value>
                <fullName>Moiety Title</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other Title</fullName>
            </value>
            <value>
                <fullName>Purple Title</fullName>
            </value>
            <value>
                <fullName>Strata Title</fullName>
            </value>
            <value>
                <fullName>Stratum Title</fullName>
            </value>
            <value>
                <fullName>Unit Title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>