ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TitleIdType__c.field-meta.xml
<CustomField>
    <fullName>TitleIdType__c</fullName>
    <label>TitleId Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>