ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TitleIdValue__c.field-meta.xml
<CustomField>
    <fullName>TitleIdValue__c</fullName>
    <description>Land’s Id number/value</description>
    <label>TitleId Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>