ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TitleSystem__c.field-meta.xml
<CustomField>
    <fullName>TitleSystem__c</fullName>
    <description>Land’s title system</description>
    <label>Title System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Old Law</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Torrens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>