ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TotalPropertyFees__c.field-meta.xml
<CustomField>
    <fullName>TotalPropertyFees__c</fullName>
    <formula>Conveyancing_Fee_Est__c +  TransferFee__c  +  TransferStampDuty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Property Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>