ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TransferFee__c.field-meta.xml
<CustomField>
    <fullName>TransferFee__c</fullName>
    <label>Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>