ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/TransferStampDuty__c.field-meta.xml
<CustomField>
    <fullName>TransferStampDuty__c</fullName>
    <label>Transfer/Stamp Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>