ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/ValuationDate__c.field-meta.xml
<CustomField>
    <fullName>ValuationDate__c</fullName>
    <label>Valuation Date</label>
    <type>Date</type>
</CustomField>