ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/Willberented__c.field-meta.xml
<CustomField>
    <fullName>Willberented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will be rented</label>
    <type>Checkbox</type>
</CustomField>