ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/WillOwn25PercentOfComplex__c.field-meta.xml
<CustomField>
    <fullName>WillOwn25PercentOfComplex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Own 25 Percent Of Complex?</label>
    <type>Checkbox</type>
</CustomField>