ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/WillOwn3UnitsInComplex__c.field-meta.xml
<CustomField>
    <fullName>WillOwn3UnitsInComplex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Own 3 Units In Complex?</label>
    <type>Checkbox</type>
</CustomField>