ctm-sf-homeloan-app/main/default/objects/LoanSecurity__c/fields/Zoning__c.field-meta.xml
<CustomField>
    <fullName>Zoning__c</fullName>
    <label>Zoning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>